Tiebreaker fixed, removed redundant code, aligned text

--- a/style.css
+++ b/style.css
@@ -96,3 +96,7 @@ button:hover{
     padding: 1mm;
 }
 
+.share {
+    margin: 0 auto;
+    text-align:center;
+}
